[package]
name = "scfs"
version = "0.9.2"
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2018"

description = "A convenient splitting and concatenating filesystem."
repository = "https://github.com/FloGa/scfs"
readme = "README.md"
categories = ["filesystem"]
license = "WTFPL"

default-run = "scfs"

exclude = ["/bump", "/sync_readme_with_doc.bash"]

[dependencies]
clap = "2.33.0"
ctrlc = { version = "3.1.3", features = ["termination"] }
daemonize = "0.5.0"
fuser = "0.12.0"
libc = "0.2.62"
rusqlite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
tempfile = "3.1.0"
